Fix spacing for model elements

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -35,6 +35,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
+  margin: 10px;
 }
 
 .close-button {
@@ -81,16 +82,27 @@ button.cancel {
 
 .header {
   font-weight: bold;
+  font-size: 105%;
 }
 
 .text-header {
   display: flex;
   flex-direction: row;
   min-width: 100px;
-
+  justify-content: space-between;
+  margin: 10px;
+  margin-bottom: 5px;
 }
 
 .text-body {
   display: flex;
   flex-direction: column;
+  margin: 10px;
+  margin-top: 5px;
+}
+
+.button-row {
+  margin-top: 10px;
+  display: flex;
+  gap: 6px;
 }
